--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,5 +5,5 @@ $bp-wide: "(min-width: 1200px)";
 
 // Colours
 $page-color: #067ada;
-$text-color: #fff;
+$text-color: #000000;
 $accent-color: #222;
