--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,6 @@ $bp-mid: "(min-width: 740px)";
 $bp-wide: "(min-width: 1200px)";
 
 // Colours
-$page-color: #067ada;
+$page-color: #FFFFFF;
 $text-color: #000000;
 $accent-color: #222;
