--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -11,10 +11,13 @@
       <header>
         <ul class="nav">
           <li>
-            <a href="/">home<small>where the heart is</small></a>
+            <a href="/">home<small> </small></a>
           </li>
           <li>
-            <a href="/about">about<small>all about this</small></a>
+            <a href="/about">about<small>What is the AFR?</small></a>
+          </li>
+          <li>
+            < a href="/contact">contact</a>
           </li>
         </ul>
         <h1>{{ title }}</h1>
