--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -11,10 +11,10 @@
       <header>
         <ul class="nav">
           <li>
-            <a href="/">home<small>page</small></a>
+            <a href="/">home</a>
           </li>
           <li>
-            <a href="/about">about<small>the AFR?</small></a>
+            <a href="/about">about</a>
           </li>
           <li>
             <a href="/contact">contact</a>
