--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,4 +6,4 @@ $bp-wide: "(min-width: 1200px)";
 // Colours
 $page-color: #FFFFFF;
 $text-color: #000000;
-$accent-color: #222;
+$accent-color: #cc3300;
