--- a/src/site/_includes/footer.njk
+++ b/src/site/_includes/footer.njk
@@ -1,6 +1,6 @@
 <footer>
 <p>
-  The AFR website is based on a Netlify template created by <a href="https://twitter.com/philhawksworth">Phil Hawksworth</a>. Find the repo on <a href=https://github.com/philhawksworth/eleventyone>Github</a>.
+  The AFR website is created by John Huang. It is based on a Netlify template by <a href="https://twitter.com/philhawksworth">Phil Hawksworth</a>. Find the repo on <a href=https://github.com/philhawksworth/eleventyone>Github</a>.
 </p>
 <p>
   This page was generated on {{ date | timestamp }}
