--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -22,7 +22,10 @@
           <li>
             <a href="/contact">contact</a>
           </li>
-        </ul>
+          <li>
+            <a href="/resources">resources</a>
+          </li>      
+          </ul>
         <h1>{{ title }}</h1>
         {%- if subtitle %}<p class="subtitle">{{ subtitle }}</p>{% endif %}
       </header>
