--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -14,13 +14,13 @@
             <a href="/">home</a>
           </li>
           <li>
-            <a href="/news">news</a>
+            <a href="/faq">faq</a>
           </li>
           <li>
             <a href="/about">about</a>
           </li>
           <li>
-            <a href="/contact">contact</a>
+            <a href="/join">join</a>
           </li>
           <li>
             <a href="/resources">resources</a>
