--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -14,6 +14,9 @@
             <a href="/">home</a>
           </li>
           <li>
+            <a href="/learn">learn</a>
+          </li>
+          <li>
             <a href="/about">about</a>
           </li>
           <li>
